--- a/templates/setup.html
+++ b/templates/setup.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
 </head>
 <body>
-    <div class="container mt-5">
+    <div class="container-fluid mt-5 px-4">
         <div class="row justify-content-center">
             <div class="col-md-6">
                 <div class="card shadow">
